http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-06-07 niel
	Mrg: dev-groups This branch brings changes to how the groups table is used. A new Groups Model
		is now the default way to access it. The older methods still work but are deprecated and
		will be removed in the future.
2018-04-23 niel
	Chg: Remove 'releases' column from groups listing and browse group.
2018-06-04 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.7.0


2018-05-25
	Fix: Replacing last use of each() in nZEDb code. Note that two libraries (forkdaemon and
		guzzlehttp/promises) still use it however.
2018-05-08 niel
	Chg: Increase size of 'xref' column in collections' tables due to some larger sizes reported.
2018-05-07 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.6.0


2018-05-03 niel
	Chg: Remove unnecessary '\n' from start of 'release have been disabled/terminated by Releases'
2018-05-02 niel
	Fix: Added statement termination (';') to Tmux main window update strings. Prevents the shell
		from interpreting them as one statement.
2018-04-16 niel
	Mrg: dev-console-command-verify branch. This adds the 'tpg' option (to './zed verify tables'
		sub-command), which checks for missing tables of active groups. It does not delete tables of
		inactive groups.
2018-04-05 niel
	Fix: Missing PHPMailer object creation.
2018-04-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.5.0


2018-03-23 niel
	Fix: Namespace issue for PHPMailer class.
	Chg: Refactored Misc::sendEmail() to use provided $from address as the 'reply-to' field (and to
		make reading it easier.
2018-03-05 niel